--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- Mobile Menu Start -->
         <ul class="mobile-menu">
            <li>
-              <a class="page-scroll" href="#hero-area">Home</a>
+              <a class="page-scroll" href="#hero-area">Hom</a>
             </li>
             <li>
               <a class="page-scroll" href="#services">Services</a>
