Tirando a marcação do botão área do cliente.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a class="nav-link page-scroll" href="#contact">Contato</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#contact">Área do Cliente</a>
+                <a class="nav-link page-scroll" href="#login">Área do Cliente</a>
               </li>
             </ul>
           </div>
@@ -91,7 +91,7 @@
               <a class="page-scroll" href="#contact">Fale Conosco</a>
             </li>
             <li>
-              <a class="page-scroll" href="#contact">Área do Cliente</a>
+              <a class="page-scroll" href="#login">Área do Cliente</a>
             </li>
         </ul>
         <!-- Mobile Menu End -->
