Commite alteração( Conheça-nos , Nossos serviços)

--- a/index.html
+++ b/index.html
@@ -126,34 +126,34 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Conheça-nos</h2>
-          <hr class="lines wow zoomIn" data-wow-delay="0.3s">
+      <!--    <hr class="lines wow zoomIn" data-wow-delay="0.3s">
           <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
-        </div>
+        --> </div>
         <div class="row">
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
-              <div class="icon">
+              <!--<div class="icon">
                 <i class="lnr lnr-pencil"></i>
-              </div>
-              <h4>Design</h4>
+              </div> -->
+              <h4>Missão</h4>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
-              <div class="icon">
+              <!--<div class="icon">
                 <i class="lnr lnr-code"></i>
-              </div>
-              <h4>Desenvolvimento Web</h4>
+              </div> -->
+              <h4>Visão</h4>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
-              <div class="icon">
+              <!-- <div class="icon">
                 <i class="lnr lnr-mustache"></i>
-              </div>
-              <h4>Treinamentos e Cursos</h4>
+              </div> -->
+              <h4>Valores</h4>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
             </div>
           </div>
@@ -176,10 +176,10 @@
               <div class="row">
                  <div class="col-lg-6 col-sm-6 col-xs-12 box-item">
                     <span class="icon">
-                      <i class="lnr lnr-rocket"></i>
+                      <i class="lnr lnr-code"></i>
                     </span>
                     <div class="text">
-                      <h4>Bootstrap 4 Based</h4>
+                      <h4>Desenvolvimento de Sistemas Web</h4>
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     </div>
                   </div>
@@ -188,7 +188,7 @@
                       <i class="lnr lnr-laptop-phone"></i>
                     </span>
                     <div class="text">
-                      <h4>Fully Responsive</h4>
+                      <h4>Desenvolvimento de Sites</h4>
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     </div>
                   </div>
