Commite icone Instagram

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 <div class="social-icons">
                   <ul>
                     <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li class="twitter"><a href="#"><i class="fa fa-instagram"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     <li class="dribbble"><a href="#"><i class="fa fa-dribbble"></i></a></li>
