--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-xs-12">
+        <!--  <div class="col-lg-4 col-xs-12">
             <div class="show-box">
               <img class="img-fulid" src="img/features/feature.png" alt="">
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
