--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#pricing">Equipe</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link page-scroll" href="#team">Parceiros</a>
-              </li> -->
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#blog">CEI</a>
               </li>
@@ -73,22 +70,19 @@
               <a class="page-scroll" href="#hero-area">Home</a>
             </li>
             <li>
-              <a class="page-scroll" href="#services">Services</a>
+              <a class="page-scroll" href="#services">Conheça-nos</a>
             </li>
             <li>
-              <a class="page-scroll" href="#features">Features</a>
+              <a class="page-scroll" href="#features">Serviços</a>
             </li>
             <li>
               <a class="page-scroll" href="#pricing">Equipe</a>
             </li>
             <li>
-              <a class="page-scroll" href="#team">Parceiros</a>
-            </li>
-            <li >
               <a class="page-scroll" href="#blog">CEI</a>
             </li>
-            <li>
-              <a class="page-scroll" href="#contact">Fale Conosco</a>
+            <li >
+              <a class="page-scroll" href="#contact">Contato</a>
             </li>
             <li>
               <a class="page-scroll" href="#login">Área do Cliente</a>
@@ -99,15 +93,6 @@
       </nav>
       <!-- Navbar End -->
       <div class="container">
-        <!-- <div class="row justify-content-md-center">
-          <div class="col-md-10">
-            <div class="contents text-center">
-              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Mate - Free Parallax Website Template</h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-            </div>
-          </div>
-        </div> -->
-
         <div class="row justify-content-md-left text-main">
           <div class="col-md-6">
             <div class="contents text-left">
@@ -126,11 +111,9 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Conheça-nos</h2>
-<<<<<<< HEAD
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"> Comprometimento não é apenas o que se vê, é o que se sente. <br>Fazemos do seu sucesso, nossa conquista.</p>,br>
+          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"> Comprometimento não é apenas o que se vê, é o que se sente. <br>Fazemos do seu sucesso, nossa conquista.</p>
         </div>
-
       </div>
     </section>
     <!-- Services Section End -->
@@ -141,123 +124,28 @@
         <div class="section-header">
           <h2 class="section-title">Nossos Serviços</h2>
           <hr class="lines">
-          <!-- <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p> -->
         </div>
-=======
-      <!--    <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
-        --> </div>
->>>>>>> 417e91c104a5e767ec040ad4d2a37e6d964bca05
-        <div class="row">
-          <div class="col-md-4 col-sm-6">
-            <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
-              <!--<div class="icon">
-                <i class="lnr lnr-pencil"></i>
-<<<<<<< HEAD
-              </div>
-              <h4>Design</h4>
-              <p>Design não é apenas o que se vê e o que se sente. O design é sobre como funciona.</p>
-=======
-              </div> -->
-              <h4>Missão</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
->>>>>>> 417e91c104a5e767ec040ad4d2a37e6d964bca05
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
-              <!--<div class="icon">
-                <i class="lnr lnr-code"></i>
-<<<<<<< HEAD
-              </div>
-              <h4>Desenvolvimento Web</h4>
-              <p>Desenvolvemos sistemas para você e sua empresa, objetivando seu crescimento.</p>
-=======
-              </div> -->
-              <h4>Visão</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
->>>>>>> 417e91c104a5e767ec040ad4d2a37e6d964bca05
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
-              <!-- <div class="icon">
-                <i class="lnr lnr-mustache"></i>
-<<<<<<< HEAD
-              </div>
-              <h4>Treinamentos e Cursos</h4>
-              <p>.</p>
-=======
-              </div> -->
-              <h4>Valores</h4>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
->>>>>>> 417e91c104a5e767ec040ad4d2a37e6d964bca05
-            </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 col-sm-6">
+          <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
+            <h4>Missão</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
           </div>
         </div>
-        <!-- <div class="row">
-          <div class="col-lg-8 col-md-12 col-xs-12">
-            <div class="container">
-              <div class="row">
-                 <div class="col-lg-6 col-sm-6 col-xs-12 box-item">
-                    <span class="icon">
-                      <i class="lnr lnr-code"></i>
-                    </span>
-                    <div class="text">
-                      <h4>Desenvolvimento de Sistemas Web</h4>
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-6 col-sm-6 col-xs-12 box-item">
-                    <span class="icon">
-                      <i class="lnr lnr-laptop-phone"></i>
-                    </span>
-                    <div class="text">
-                      <h4>Desenvolvimento de Sites</h4>
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-6 col-sm-6 col-xs-12 box-item">
-                    <span class="icon">
-                      <i class="lnr lnr-layers"></i>
-                    </span>
-                    <div class="text">
-                      <h4>Parallax Background</h4>
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-6 col-sm-6 col-xs-12 box-item">
-                    <span class="icon">
-                      <i class="lnr lnr-cog"></i>
-                    </span>
-                    <div class="text">
-                      <h4>Easy to Customize</h4>
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                    </div>
-                  </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-8">
-                    <div class="video-promo-content text-center">
-                      <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Watch Our Intro video</h2>
-                      <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Aliquam vestibulum cursus felis. In iaculis iaculis sapien ac condimentum. Vestibulum congue posuere lacus, id tincidunt nisi porta sit amet. Suspendisse et sapien varius, pellentesque dui non, semper orci.</p>
-                      <a href="https://www.youtube.com/watch?v=IXoMDwh4Cq8" class="video-popup wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="lnr lnr-film-play"></i></a>
-                    </div>
-                </div>
-              </div>
-            </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
+            <h4>Visão</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
           </div>
-        <!--  <div class="col-lg-4 col-xs-12">
-            <div class="show-box">
-              <img class="img-fulid" src="img/features/feature.png" alt="">
-            </div>
-<<<<<<< HEAD
-          </div>
-        </div> -->
-=======
-          </div> -->
         </div>
->>>>>>> 417e91c104a5e767ec040ad4d2a37e6d964bca05
+        <div class="col-md-4 col-sm-6">
+          <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
+            <h4>Valores</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+          </div>
+        </div>
       </div>
     </section>
     <!-- Features Section End -->
@@ -270,63 +158,6 @@
           <hr class="lines">
           <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
         </div>
-
-        <!-- <div class="row pricing-tables">
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="pricing-table">
-              <div class="pricing-details">
-                <h2>Free</h2>
-                <span>$00</span>
-                <ul>
-                  <li>Consectetur adipiscing</li>
-                  <li>Nunc luctus nulla et tellus</li>
-                  <li>Suspendisse quis metus</li>
-                  <li>Vestibul varius fermentum erat</li>
-                </ul>
-              </div>
-              <div class="plan-button">
-                <a href="#" class="btn btn-common">Get Plan</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="pricing-table">
-              <div class="pricing-details">
-                <h2>Popular</h2>
-                <span>$3.99</span>
-                <ul>
-                  <li>Consectetur adipiscing</li>
-                  <li>Nunc luctus nulla et tellus</li>
-                  <li>Suspendisse quis metus</li>
-                  <li>Vestibul varius fermentum erat</li>
-                </ul>
-              </div>
-              <div class="plan-button">
-                <a href="#" class="btn btn-common">Buy Now</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="pricing-table">
-              <div class="pricing-details">
-                <h2>Premium</h2>
-                <span>$9.50</span>
-                <ul>
-                  <li>Consectetur adipiscing</li>
-                  <li>Nunc luctus nulla et tellus</li>
-                  <li>Suspendisse quis metus</li>
-                  <li>Vestibul varius fermentum erat</li>
-                </ul>
-              </div>
-              <div class="plan-button">
-                <a href="#" class="btn btn-common">Buy Now</a>
-              </div>
-            </div>
-          </div>
-
-        </div> -->
       </div>
     </div>
     <!-- End Pricing Table Section -->
@@ -386,82 +217,6 @@
           <hr class="lines">
           <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
         </div>
-        <!-- <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
-
-            <div class="blog-item-wrapper">
-              <div class="blog-item-img">
-                <a href="single-post.html">
-                  <img src="img/blog/img1.jpg" alt="">
-                </a>
-              </div>
-              <div class="blog-item-text">
-                <div class="meta-tags">
-                  <span class="date"><i class="lnr  lnr-clock"></i>2 Days Ago</span>
-                  <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
-                </div>
-                <h3>
-                  <a href="single-post.html">How often should you tweet?</a>
-                </h3>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...
-                </p>
-                <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
-
-            <div class="blog-item-wrapper">
-              <div class="blog-item-img">
-                <a href="single-post.html">
-                  <img src="img/blog/img2.jpg" alt="">
-                </a>
-              </div>
-              <div class="blog-item-text">
-                <div class="meta-tags">
-                  <span class="date"><i class="lnr  lnr-clock"></i>2 Days Ago</span>
-                  <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
-                </div>
-                <h3>
-                  <a href="single-post.html">Content is still king</a>
-                </h3>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...
-                </p>
-                <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
-
-            <div class="blog-item-wrapper">
-              <div class="blog-item-img">
-                <a href="single-post.html">
-                  <img src="img/blog/img3.jpg" alt="">
-                </a>
-              </div>
-              <div class="blog-item-text">
-                <div class="meta-tags">
-                  <span class="date"><i class="lnr  lnr-clock"></i>2 Days Ago</span>
-                  <span class="comments"><a href="#"><i class="lnr lnr-bubble"></i> 24 Comments</a></span>
-                </div>
-                <h3>
-                  <a href="single-post.html">Social media at work</a>
-                </h3>
-                <p>
-                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...
-                </p>
-                <a href="single-post.html" class="btn-rm">Read More <i class="lnr lnr-arrow-right"></i></a>
-              </div>
-            </div>
-
-          </div>
-        </div> -->
       </div>
     </section>
     <!-- blog Section End -->
@@ -512,11 +267,9 @@
                         <div class="help-block with-errors"></div>
                       </div>
                       <div class="submit-button text-center">
-<<<<<<< HEAD
-                        <button class="btn btn-common" id="submit" type="submit">Enviar Mensaagem</button>
-=======
-                        <button class="btn btn-common" id="submit" type="submit">Enviar</button>
->>>>>>> 417e91c104a5e767ec040ad4d2a37e6d964bca05
+
+                        <button class="btn btn-common" id="submit" type="submit">Enviar Mensagem</button>
+
                         <div id="msgSubmit" class="h3 text-center hidden"></div>
                         <div class="clearfix"></div>
                       </div>
@@ -539,16 +292,16 @@
           <div class="col-lg-6 col-sm-6 col-xs-12">
             <ul class="footer-links">
               <li>
-                <a href="#">Homepage</a>
+                <a href="#hero-area">Home</a>
               </li>
               <li>
-                <a href="#">Services</a>
+                <a href="#services">Conheça-nos</a>
               </li>
               <li>
-                <a href="#">About Us</a>
+                <a href="#features">Serviços</a>
               </li>
               <li>
-                <a href="#">Contact</a>
+                <a href="#contact">Contato</a>
               </li>
             </ul>
           </div>
