--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="section-header">
           <h2 class="section-title">Nossa Equipe</h2>
           <hr class="lines">
-          <p class="section-subtitle">Nossa equipe trabalha com compromisso e melhoria contínua para conquistar a cada dia, excelência em qualidade e satisfação dos nossos clientes!  <br> Profissionais inovadores e qualificados.</p>
+          <p class="section-subtitle">Nossa equipe é composta por profissionais competentes, em constante desenvolvimento, aprimoramento, com força de vontade e comprometimento sempre em buscando a excelência em qualidade, performance e a satisfação dos nossos clientes!</p>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 col-xs-12">
@@ -285,7 +285,28 @@
         <div class="section-header">
           <h2 class="section-title">Centro de Empreendedorismo e Inovação</h2>
           <hr class="lines">
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
+          <!-- <p class="section-subtitle">
+            <br><br>
+          </p> -->
+          <div class="row">
+            <div class="col-12 col-md-4 logo-cei d-flex align-items-center justify-content-center">
+              <img src="img/partners/cei-logo.png" alt="CEI">
+            </div>
+            <div class="col-12 col-md-8">
+              <p class="section-subtitle text-justify">
+                Estude a história de grandes empreendedores e desenvolva seu próprio projeto de empreendedorismo!
+                Com a missão de potencializar competências e despertar o empreendedorismo como opção de carreira gerando valor para a Região do Cariri.
+                Assim desenvolver um polo de cultura empreendedora no interior do Nordeste até 2025.
+              </p>
+            </div>
+          </div>
+          <div class="row btn-more">
+            <div class="col-12 col-md-12">
+              <div class="submit-button text-center">
+                <a href="http://www.fjn.edu.br/cei/" class="btn btn-common"> Saiba Mais</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
