--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
         <div class="section-header">
           <h2 class="section-title">Centro de Empreendedorismo e Inovação</h2>
           <hr class="lines">
-          <!-- <p class="section-subtitle">
-            <br><br>
-          </p> -->
+          <p class="section-subtitle">
+            O responsável por possibilitar essa empresa se tornar uma realidade.
+          </p>
           <div class="row">
             <div class="col-12 col-md-4 logo-cei d-flex align-items-center justify-content-center">
               <img src="img/partners/cei-logo.png" alt="CEI">
