--- a/index.html
+++ b/index.html
@@ -236,40 +236,26 @@
     <!-- testimonial Section Start -->
     <div id="testimonial" class="section" data-stellar-background-ratio="0.1">
       <div class="container">
+        <div class="section-header">
+          <div class="contact-us">
+            <h3>Nossos Parceiros</h3>
+          </div>
+        </div>
+
         <div class="row justify-content-md-center">
           <div class="col-md-12">
             <div class="touch-slider owl-carousel owl-theme">
               <div class="testimonial-item">
-                <img src="img/testimonial/customer1.jpg" alt="Client Testimonoal" />
-                <div class="testimonial-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
-                  <h3>Jone Deam</h3>
-                  <span>Fondor of Jalmori</span>
-                </div>
+                <img src="img/partners/fjn.jpg" alt="Parceiro" />
               </div>
               <div class="testimonial-item">
-                <img src="img/testimonial/customer2.jpg" alt="Client Testimonoal" />
-                <div class="testimonial-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
-                  <h3>Oidila Matik</h3>
-                  <span>President Lexo Inc</span>
-                </div>
+                <img src="img/partners/github.jpg" alt="Parceiro" />
               </div>
               <div class="testimonial-item">
-                <img src="img/testimonial/customer3.jpg" alt="Client Testimonoal" />
-                <div class="testimonial-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
-                  <h3>Alex Dattilo</h3>
-                  <span>CEO Optima Inc</span>
-                </div>
+                <img src="img/partners/laravel.jpg" alt="Parceiro" />
               </div>
               <div class="testimonial-item">
-                <img src="img/testimonial/customer4.jpg" alt="Client Testimonoal" />
-                <div class="testimonial-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. send do <br> adipisicing ciusmod tempor incididunt ut labore et</p>
-                  <h3>Paul Kowalsy</h3>
-                  <span>CEO & Founder</span>
-                </div>
+                <img src="img/partners/angular.jpg" alt="Parceiro" />
               </div>
             </div>
           </div>
@@ -288,26 +274,28 @@
           <p class="section-subtitle">
             O responsável por possibilitar essa empresa se tornar uma realidade.
           </p>
-          <div class="row">
-            <div class="col-12 col-md-4 logo-cei d-flex align-items-center justify-content-center">
-              <img src="img/partners/cei-logo.png" alt="CEI">
-            </div>
-            <div class="col-12 col-md-8">
-              <p class="section-subtitle text-justify">
-                Estude a história de grandes empreendedores e desenvolva seu próprio projeto de empreendedorismo!
-                Com a missão de potencializar competências e despertar o empreendedorismo como opção de carreira gerando valor para a Região do Cariri.
-                Assim desenvolver um polo de cultura empreendedora no interior do Nordeste até 2025.
-              </p>
-            </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12 col-md-4 logo-cei d-flex align-items-center justify-content-center">
+            <img src="img/partners/cei-logo.png" alt="CEI">
           </div>
-          <div class="row btn-more">
-            <div class="col-12 col-md-12">
-              <div class="submit-button text-center">
-                <a href="http://www.fjn.edu.br/cei/" class="btn btn-common"> Saiba Mais</a>
-              </div>
+          <div class="col-12 col-md-8">
+            <p class="section-subtitle text-justify">
+              Estude a história de grandes empreendedores e desenvolva seu próprio projeto de empreendedorismo!
+              Com a missão de potencializar competências e despertar o empreendedorismo como opção de carreira gerando valor para a Região do Cariri.
+              Assim desenvolver um polo de cultura empreendedora no interior do Nordeste até 2025.
+            </p>
+          </div>
+        </div>
+        <div class="row btn-more">
+          <div class="col-12 col-md-12">
+            <div class="submit-button text-center">
+              <a href="http://www.fjn.edu.br/cei/" class="btn btn-common"> Saiba Mais</a>
             </div>
           </div>
         </div>
+
       </div>
     </section>
     <!-- blog Section End -->
