redes social prontas

--- a/index.html
+++ b/index.html
@@ -114,6 +114,28 @@
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
           <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"> Comprometimento não é apenas o que se vê, é o que se sente. <br>Fazemos do seu sucesso, nossa conquista.</p>
         </div>
+
+        <div class="row">
+          <div class="col-md-4 col-sm-6">
+            <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
+              <h4>Missão</h4>
+              <p>Potencializar competências e despertar o empreendedorismo como opção de carreira gerando valor para a Região do Cariri.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6">
+            <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
+              <h4>Visão</h4>
+              <p>Desenvolver um polo de cultura empreendedora no interior do Nordeste até 2025.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6">
+            <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
+              <h4>Valores</h4>
+              <p>Ética, Inovação e Sustentabilidade na Edificação do empreendedor caririense.</p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
     <!-- Services Section End -->
@@ -130,19 +152,28 @@
       <div class="row">
         <div class="col-md-4 col-sm-6">
           <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
-            <h4>Missão</h4>
+            <div class="icon">
+              <i class="lnr lnr-pencil"></i>
+            </div>
+            <h4>Design</h4>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
           <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
-            <h4>Visão</h4>
+            <div class="icon">
+              <i class="lnr lnr-code"></i>
+            </div>
+            <h4>Desenvolvimento Web</h4>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
           <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
-            <h4>Valores</h4>
+            <div class="icon">
+              <i class="lnr lnr-graduation-hat"></i>
+            </div>
+            <h4>Cursos e Treinamento</h4>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
           </div>
         </div>
@@ -168,8 +199,7 @@
                   <p>Design</p>
                   <ul class="social-list">
                     <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   </ul>
                 </div>
@@ -185,8 +215,7 @@
                   <p>Desenvolvedor</p>
                   <ul class="social-list">
                     <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   </ul>
                 </div>
@@ -202,8 +231,7 @@
                   <p>Gerente de Projetos</p>
                   <ul class="social-list">
                     <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   </ul>
                 </div>
@@ -219,8 +247,7 @@
                   <p>Analista de Banco de Dados</p>
                   <ul class="social-list">
                     <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   </ul>
                 </div>
@@ -315,11 +342,10 @@
                 </div>
                 <div class="social-icons">
                   <ul>
+
                     <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li class="dribbble"><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                    <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li class="whatsapp"><a href="#"><i class="fa fa-whatsapp"></i></a></li>
                   </ul>
                 </div>
               </div>
